# DewDuct

./: .gitignore  Cargo.toml  Makefile  README.md  README.org  build.rs  pmos_sideload.sh  rustfmt.toml
aport/: APKBUILD  APKBUILD_dev
data/: null.daknig.dewduct.metainfo.xml
pmaport/: APKBUILD  publish.txt
resources/: DewDuct.cmb  channel_header.ui  channel_page.ui  channel_row.ui  dewduct.ui  popular_page.ui  resources.gresource.xml  search_header.ui  search_page.ui  subscriptions_page.ui  thumbnail.ui  update_page.ui  video_page.ui  video_row.ui  window.ui  yt_item_list.ui  yt_item_row.ui
src/: application.rs  cache.rs  channel_header.rs  channel_page.rs  channel_row.rs  config.rs  main.rs  popular_page.rs  search_page.rs  subscriptions_page.rs  thumbnail.rs  update_page.rs  util.rs  video_page.rs  video_row.rs  window.rs  yt_item_list.rs  yt_item_row.rs
src/yt_item_list/: data.rs
