[package]
name = "dewduct"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.4", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.6", package = "gtk4", features = ["v4_6"] }
anyhow = "1.0"
thiserror = "1.0"
isahc = "1.7"
once_cell = "1.19"
humantime = "2.1"
urlencoding = "2.1"
html-escape = "0.2"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"

[dependencies.invidious]
version = "0.7"
features = ["async", "reqwest_async"]

[build-dependencies]
glib-build-tools = "0.17"
